Add new file Detail

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="./bootstrap.min.css">
     <title>13-Bolalar Musiqa va San'at Maktabi</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="./bootstrap.min.js"></script>
   </body>
 </html>
